@@ -90,6 +90,7 @@ nosetests --with-doctest
 | [Geometric mean][]   | `geometric_mean([1, 10])`          |
 | [Harmonic mean][]    | `harmonic_mean([1, 2, 4])`         |
 | [Root mean square][] | `root_mean_square([1, -1, 1, -1])` |
+| [Add to mean][]      | `add_to_mean(40, 4, (10, 12))`     |
 | [Skewness][]         | `skew([1, 2, 5])`                  |
 | [Kurtosis][]         | `kurtosis([1, 2, 3, 4, 5])`        |
 
@@ -99,6 +100,7 @@ nosetests --with-doctest
 [Geometric mean]: http://simplestatistics.readthedocs.io/en/latest/#geometric-mean
 [Harmonic mean]: http://simplestatistics.readthedocs.io/en/latest/#harmonic-mean
 [Root mean square]: http://simplestatistics.readthedocs.io/en/latest/#root-mean-square
+[Add to mean]: http://simplestatistics.readthedocs.io/en/latest/#add-to-mean
 [Skewness]: http://simplestatistics.readthedocs.io/en/latest/#skewness
 [Kurtosis]: http://simplestatistics.readthedocs.io/en/latest/#kurtosis
 
