@@ -12,6 +12,7 @@ from .statistics.mode import mode
 from .statistics.geometric_mean import geometric_mean
 from .statistics.harmonic_mean import harmonic_mean
 from .statistics.root_mean_square import root_mean_square
+from .statistics.add_to_mean import add_to_mean
 from .statistics.skew import skew
 from .statistics.kurtosis import kurtosis
 
