@@ -7,6 +7,7 @@ History
 Added
 
 * ``covariance()``
+* ``add_to_mean()``
 
 0.3.0 (2016-12-03)
 -----------
